--- a/devops.html
+++ b/devops.html
@@ -148,7 +148,7 @@ excited by our goal of infrastructure as code to work closely with our product a
 deployment mechanisms that assist in the software development life cycle. 
 Additional?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://livinggoods.applytojob.com/apply/KM6fHaI5Sg/Devops-Engineer'>Devops Engineer - Living Goods - Career Page</a></h5> 
+<h5><a href='http://livinggoods.applytojob.com/apply/KM6fHaI5Sg/Devops-Engineer'>Devops Engineer - Living Goods - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -156,7 +156,7 @@ Additional?...</p>
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/GBM1/743999691363958-devops-lead'>GBM DevOps Lead | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/GBM1/743999691363958-devops-lead'>GBM DevOps Lead | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -194,7 +194,7 @@ and has worked for companies like Google and Cisco. Nathan is ex-Chief?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/altisource/jobs/1786853'>Job Application for Group Manager, DevOps at Altisource</a></h5> 
+<h5><a href='https://boards.greenhouse.io/altisource/jobs/1786853'>Job Application for Group Manager, DevOps at Altisource</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -202,7 +202,7 @@ and has worked for companies like Google and Cisco. Nathan is ex-Chief?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/sumup/jobs/4368634002'>Job Application for Senior DevOps Engineer Sofia at SumUp</a></h5> 
+<h5><a href='https://boards.greenhouse.io/sumup/jobs/4368634002'>Job Application for Senior DevOps Engineer Sofia at SumUp</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -228,7 +228,7 @@ and has worked for companies like Google and Cisco. Nathan is ex-Chief?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... Apply online for the job of DevOps Engineer at Fetchr.</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/burwood/job/oxHCafwK'>Burwood Group Careers - DevOps Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/burwood/job/oxHCafwK'>Burwood Group Careers - DevOps Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -405,7 +405,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://workforcesource.recruiterbox.com/jobs/fk03fzy'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://workforcesource.recruiterbox.com/jobs/fk03fzy'>
     0722 - Sr DevOps Engineer at Workforce Source
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -433,7 +433,7 @@ term?...</p>
 <p><span class="badge badge-light">Lisbon Lisbon Lisbon, Portugal</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/guidewire-software/job/oYSzafwj'>Guidewire Software, Inc. Careers - Cloud DevOps Manager - Exton, PA</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/guidewire-software/job/oYSzafwj'>Guidewire Software, Inc. Careers - Cloud DevOps Manager - Exton, PA</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
