--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,12 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://digimind.recruiterbox.com/jobs/fk03fte'>
+    Product Owner / AMOA at Digimind
+</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-28</p>
+<hr/>
 <h5><a href='https://jobs.lever.co/reflektive.com/425148a5-4522-4d30-b5f8-941257a8016f'>Reflektive - Product Manager / Senior Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
@@ -60,7 +66,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/truecaller/jobs/1789918'>Job Application for Product Manager - Strategy team at Truecaller</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/truecaller/jobs/1789918'>Job Application for Product Manager - Strategy team at Truecaller</a></h5> 
 <p><span class="badge badge-light">Stockholm, Sweden</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -72,7 +78,7 @@
 <p><span class="badge badge-light">Ontario, Canada</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oVYY9fwK&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=nMJeWLwV'>ServiceNow Careers - Senior Technical Product Manager, Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=q4d9Vfw5&k=Job&j=oVYY9fwK&__jvst=Employee+Referral&__jvsd=s3Hlngwd&__jvsc=Twitter&bid=nMJeWLwV'>ServiceNow Careers - Senior Technical Product Manager, Platform</a></h5> 
 <p><span class="badge badge-light">Chicago Chicago, IL San Diego Chicago</span></p>
 <p>Posted on:: 2019-07-28</p>
 <hr/>
@@ -110,7 +116,7 @@
 <p><span class="badge badge-light">Seattle Seattle San Francisco New York London Mumbai</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/jbs/job/o1wDafw4'> JBS USA Careers - 2ND SHIFT PRODUCT MANAGER</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/jbs/job/o1wDafw4'> JBS USA Careers - 2ND SHIFT PRODUCT MANAGER</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -142,7 +148,7 @@
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/axon/62944344-a49e-40eb-bc46-8895977f3430'>Axon - Senior Product Manager, Realtime Services</a></h5> 
+<h5><a href='https://jobs.lever.co/axon/62944344-a49e-40eb-bc46-8895977f3430'>Axon - Senior Product Manager, Realtime Services</a></h5> 
 <p><span class="badge badge-light">Seattle, Washington</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -169,7 +175,7 @@
 <p>Jul 20, 2019 ... SIDEARM Sports is now hiring a Assistant Product Manager, Streaming Services 
 in Syracuse, New York. Review all of the job details and apply today!</p>
 <hr/>
-<h5><a href='https://eurostar.workable.com/j/54562E7FB1'>Eurostar - Jobs: Senior Product Owner - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eurostar.workable.com/j/54562E7FB1'>Eurostar - Jobs: Senior Product Owner - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -185,7 +191,7 @@ in Syracuse, New York. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://seequent.workable.com/j/8C127AACCE'>Seequent - Jobs: Product Owner - Apply online</a></h5> 
+<h5><a href='https://seequent.workable.com/j/8C127AACCE'>Seequent - Jobs: Product Owner - Apply online</a></h5> 
 <p><span class="badge badge-light">Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -201,7 +207,7 @@ in Syracuse, New York. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/automationanywhere/job/oHHBafwT'>Automation Anywhere Careers - Product Manager</a></h5> 
+<h5><a href='https://jobs.jobvite.com/automationanywhere/job/oHHBafwT'>Automation Anywhere Careers - Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -312,7 +318,7 @@ published: 12.04.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://bossanovarobotics.applytojob.com/apply/I07CAmf6Rw/Technical-Product-Manager-Robotics'>Technical Product Manager - Robotics - Bossanova Robotics - Career Page</a></h5> 
+<h5><a href='http://bossanovarobotics.applytojob.com/apply/I07CAmf6Rw/Technical-Product-Manager-Robotics'>Technical Product Manager - Robotics - Bossanova Robotics - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -394,7 +400,7 @@ published: 12.04.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/product-manager-11689'>Product Manager - Akamai Careers</a></h5> 
+<h5><a href='https://akamaijobs.referrals.selectminds.com/jobs/product-manager-11689'>Product Manager - Akamai Careers</a></h5> 
 <p><span class="badge badge-light">Cambridge</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -419,7 +425,7 @@ roadmap that heavily leverages Salesforce.com, customer data, and integrations
 <p>15. Juli 2019 ... faveo GmbH has a job opening for Junior Product Manager (m/w/d) in Essen (
 published: 06.05.2019). Apply now or check the other available jobs.</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/92666B7897'>DataVisor - Jobs: Product Designer - Mountain View, CA - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.workable.com/j/92666B7897'>DataVisor - Jobs: Product Designer - Mountain View, CA - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... unsupervised machine learning to detect fraudulent activity for financial. 
 transactions, mobile user acquisition, social networks, commerce and money.</p>
@@ -459,10 +465,6 @@ experience analysis and testing, competitive research and any other relevant?...
 <hr/>
 <h5><a href='https://jobs.lever.co/capeanalytics/d712fde6-8b50-40cf-a4f9-8c735c74c4e1'>Cape Analytics - Product Manager</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/funko/job/o9sBafw6'>Funko Careers - Technical Product Manager, Mobile Apps</a></h5> 
-<p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 
