--- a/full-stack.html
+++ b/full-stack.html
@@ -42,7 +42,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/payfit/f3677c1c-2cff-4401-833e-8c7bf60de829'>PayFit - Senior Full-Stack Engineer - Growth</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/payfit/f3677c1c-2cff-4401-833e-8c7bf60de829'>PayFit - Senior Full-Stack Engineer - Growth</a></h5> 
 <p><span class="badge badge-light">Paris</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -100,7 +100,7 @@
 <p><span class="badge badge-light">New York, NYNYC</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<h5><a href='https://1871.workable.com/j/438902BECE'>1871 Member Companies - Jobs: Full Stack Web Developer (PHP) - Black Spectacles - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://1871.workable.com/j/438902BECE'>1871 Member Companies - Jobs: Full Stack Web Developer (PHP) - Black Spectacles - Apply online</a></h5> 
 <p><span class="badge badge-light">Chicago, Illinois, United States Chicago, IL Minneapolis</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -159,7 +159,7 @@ Idea People.</p>
 <p><span class="badge badge-light">London London, United Kingdom</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/farfetch/job/o6sEafw6'>Farfetch Careers - Full Stack Developer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/farfetch/job/o6sEafw6'>Farfetch Careers - Full Stack Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -192,7 +192,7 @@ Idea People.</p>
 <p>3 days ago ... Software Development Engineer-2 (SDE-2) [Full Stack]. Kochi, Kerala | Full time. 
 Apply Now. What you will do: Be a part of our development team and actively?...</p>
 <hr/>
-<h5><a href='https://ontruck.workable.com/j/389462DC7C'>Senior Full Stack Engineer - Apply online - Ontruck - Jobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ontruck.workable.com/j/389462DC7C'>Senior Full Stack Engineer - Apply online - Ontruck - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply online for the job of Senior Full Stack Engineer at Ontruck.</p>
 <hr/>
@@ -200,11 +200,11 @@ Apply Now. What you will do: Be a part of our development team and actively?...<
 <p><span class="badge badge-light"></span></p>
 <p>4 days ago ... Apply online for the job of Senior Software Engineer (Full Stack) at RateSetter.</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/samsung-next/job/oAXCafw3'>Samsung NEXT Careers - Senior Full Stack Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/samsung-next/job/oAXCafw3'>Samsung NEXT Careers - Senior Full Stack Engineer</a></h5> 
 <p><span class="badge badge-light">Tel Aviv</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/careermovement/job/4s3451387wh9bkwkxg8epx94ry'>Back end or full stack software engineer | Career Movement</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/careermovement/job/4s3451387wh9bkwkxg8epx94ry'>Back end or full stack software engineer | Career Movement</a></h5> 
 <p><span class="badge badge-light">Manhattan Beach</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -230,7 +230,7 @@ Apply Now. What you will do: Be a part of our development team and actively?...<
 learning and natural language processing to empower real world business 
 solutions?...</p>
 <hr/>
-<h5><a href='https://cornerstone-research-group-inc.workable.com/jobs/1077691'>Cornerstone Research Group, Inc. - Jobs: Full Stack Developer ...</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cornerstone-research-group-inc.workable.com/jobs/1077691'>Cornerstone Research Group, Inc. - Jobs: Full Stack Developer ...</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 15, 2019 ... ... sensor/hardware integration, experience with deployment and sustainment, 
 augmented/virtual reality development and machine learning/artificial 
@@ -260,7 +260,7 @@ intelligence?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://justaddmusic.join.com/jobs/259403-fullstack-developer-m-f-d'>Fullstack Developer</a></h5> 
+<h5><a href='https://justaddmusic.join.com/jobs/259403-fullstack-developer-m-f-d'>Fullstack Developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 17, 2019 ... JAM Just Add Music GmbH has a job opening for Fullstack Developer (m/f/d) in 
 Berlin (published: 19.06.2019). Apply now or check the other available jobs.</p>
@@ -402,7 +402,7 @@ business?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://rochester-talent.freshteam.com/jobs/CS4Lv_PJjX-r/full-stack-developer'>full stack developer</a></h5> 
+<h5><a href='https://rochester-talent.freshteam.com/jobs/CS4Lv_PJjX-r/full-stack-developer'>full stack developer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... FULL STACK DEVELOPER. Ch?a, Cundinamarca | Full time. Apply Now. 
 Rochester School is a private school focused on environmental sustainability and
